--- a/client/src/components/JoinButton/JoinButton.css
+++ b/client/src/components/JoinButton/JoinButton.css
@@ -1,4 +1,8 @@
 button {
   height: 100px;
   width: 200px;
+  background-color: #f7882f;
+  color: white;
+  margin-top: 230px;
+  margin-left: 30px;
 }
