--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,3 +1,13 @@
 ul {
   list-style-type: none;
+  color: white;
+}
+
+nav {
+  background-color: #6b7a8f;
+}
+
+.navbar-brand,
+.nav-link {
+  color: white;
 }
