continued development of home page, converted px to rem

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,19 @@
-.App {
-  text-align: center;
+html {
+  /* 1 rem = 10px */
+  font-size: 62.5%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.title {
+  text-align: left;
+  font-size: 20rem;
   color: white;
+  padding-top: 7rem;
+  padding-left: 7rem;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.description {
+  padding-left: 7rem;
+  text-align: left;
+  color: white;
+  font-size: 3rem;
 }
