modified containers/rows/columns and centered infoBox content

--- a/client/src/components/InfoBoxes/InfoBoxes.css
+++ b/client/src/components/InfoBoxes/InfoBoxes.css
@@ -13,3 +13,12 @@
   line-height: 5rem;
   font-size: 4rem;
 }
+
+.dogspic {
+  margin-top: 130px;
+  background-image: linear-gradient(
+      rgba(255, 0, 0, 0.45),
+      rgba(255, 0, 0, 0.45)
+    ),
+    url(/assets/dogfriends.jpg);
+}
