--- a/client/src/components/InfoBoxes/InfoBoxes.css
+++ b/client/src/components/InfoBoxes/InfoBoxes.css
@@ -16,15 +16,16 @@
 }
 
 .dogspic {
+  background: linear-gradient(red, blue);
   margin-top: 130px;
   clip-path: polygon(
-    30% 0%,
-    70% 0%,
-    100% 30%,
-    100% 70%,
-    70% 100%,
-    30% 100%,
-    0% 70%,
-    0% 30%
+    20% 0%,
+    80% 0%,
+    100% 20%,
+    100% 80%,
+    80% 100%,
+    20% 100%,
+    0% 80%,
+    0% 20%
   );
 }
