app was not working, error from node modules, erased node modules and re-intalled

--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -8,3 +8,16 @@
   height: 10rem;
   width: 20rem;
 }
+
+.styles_closeIcon__1QwbI {
+  margin-left: 200px;
+}
+
+.styles_closeButton__20ID4 {
+  margin-left: 200px;
+}
+
+.grey-text {
+  padding-top: 200px;
+  font-size: 30px;
+}
