--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -1,9 +1,3 @@
-.logInBtn {
-  padding: 0;
-  margin: 0;
-  font-size: 30px;
-}
-
 .submitButton {
   height: 100px;
   width: 100px;
@@ -20,4 +14,34 @@ input[type="text"] {
 
 input::placeholder {
   font-size: 30px;
+}
+
+.joinUs {
+  height: 10rem;
+  width: 20rem;
+  background-color: #f7882f;
+  color: white;
+  margin-top: 30rem;
+  margin-left: 20rem;
+  font-size: 3rem;
+}
+
+/* Button styling */
+/* Grow Rotate */
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
