created media queries for joinUs button

--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -24,6 +24,7 @@ input::placeholder {
   margin-top: 30rem;
   margin-left: 20rem;
   font-size: 3rem;
+  position: relative;
 }
 
 /* Button styling */
@@ -44,4 +45,29 @@ input::placeholder {
 .hvr-grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  #joinUs {
+    height: 10rem;
+    width: 20rem;
+    background-color: #f7882f;
+    color: white;
+    margin: 0;
+    font-size: 3rem;
+    position: relative;
+  }
+}
+
+/* Portrait and Landscape */
+@media screen and (max-width: 480px) and (max-height: 800px) {
+  #joinUs {
+    height: 10rem;
+    width: 20rem;
+    background-color: #f7882f;
+    color: white;
+    margin: 0;
+    font-size: 3rem;
+    position: relative;
+  }
 }
