--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -6,7 +6,7 @@
   font-size: 25px;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"] {
   margin: 30px;
   height: 60px;
   width: 200px;
