--- a/client/src/components/ImageUpload/ImageUpload.css
+++ b/client/src/components/ImageUpload/ImageUpload.css
@@ -3,14 +3,6 @@
   font-size: 18px;
   font-family: "Cabin Sketch", cursive;
 }
-
-/* .image-btn {
-  height: 100px;
-  width: 300px;
-  font-size: 30px;
-  background-color: #6b7a8f;
-  color: white;
-  margin-left: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-} */
+.rendered-img {
+  max-width: 200px;
+}
