--- a/client/src/components/DogCards/DogCards.css
+++ b/client/src/components/DogCards/DogCards.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   background: #fff;
   border-radius: 2px;
   height: 250px;
@@ -19,4 +19,13 @@
 }
 .card > .img-container > img {
   width: 60%;
+} */
+
+.cardDiv {
+  height: 500px;
+  width: 450px;
+  display: inline-block;
+  margin-bottom: 100px;
+  margin-left: 200px;
+  margin-right: 100px;
 }
