--- a/client/src/components/SignUpForm/SignUpForm.css
+++ b/client/src/components/SignUpForm/SignUpForm.css
@@ -1,4 +1,5 @@
-input[type="text"], input[type="password"] {
+input[type="text"],
+input[type="password"] {
   width: 100%;
   border: 1px solid #f7c331;
 }
@@ -23,4 +24,5 @@ input[type="text"], input[type="password"] {
   max-width: 200px;
   float: right;
   margin-right: 100px;
+  image-orientation: from-image;
 }
