--- a/client/src/components/DogCards/DogCards.css
+++ b/client/src/components/DogCards/DogCards.css
@@ -23,7 +23,7 @@
 
 .cardDiv {
   height: 500px;
-  width: 450px;
+  width: 400px;
   display: inline-block;
   margin-bottom: 100px;
   margin-left: 200px;
@@ -31,5 +31,6 @@
 }
 
 img {
-  width: 450px;
+  width: 400px;
+  height: 450px;
 }
