--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -7,20 +7,16 @@ footer {
   width: "100%";
 }
 
-.list-unstyled {
+.footer-link {
   font-size: 18px;
-  padding: 10px;
   text-align: right;
-  display: inline;
-  margin-left: 40px;
+  padding: 10px;
+  margin-right: 80px;
+  display: inline-block;
 }
 
 .linkDiv {
-  margin-top: 60px;
-}
-
-a:hover {
-  color: #6b7a8f;
+  margin-top: 35px;
 }
 
 .footer-text {
@@ -29,6 +25,6 @@ a:hover {
 }
 
 .footer-logo {
-  width: 350px;
-  text-align: center;
+  max-width: 300px;
+  max-height: 150px;
 }
