--- a/client/src/components/SignUpForm/SignUpForm.css
+++ b/client/src/components/SignUpForm/SignUpForm.css
@@ -21,7 +21,8 @@ input[type="password"] {
 }
 
 .renderedImg {
-  max-width: 200px;
+  max-width: 300px;
+  max-height: 150px;
   float: right;
   margin-right: 100px;
   image-orientation: from-image;
