--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -5,6 +5,10 @@ footer {
   padding: 20px;
   height: "40px";
   width: "100%";
+  position: relative;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .footer-link {
