--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -1,12 +1,15 @@
 .submitButton {
   height: 100px;
-  width: 100px;
+  width: 125px;
   margin-left: 30px;
   margin-bottom: 30px;
   font-size: 25px;
+  background-color: #f7882f;
+  color: white;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"],
+input[type="password"] {
   margin: 30px;
   height: 60px;
   width: 200px;
@@ -25,6 +28,11 @@ input::placeholder {
   margin-left: 20rem;
   font-size: 3rem;
   position: relative;
+}
+
+#username,
+#password {
+  width: 75%;
 }
 
 /* Button styling */
