--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -34,6 +34,7 @@ button:focus {
   -webkit-box-shadow: 1px 1px 2px 2px #ccc;
   -moz-box-shadow: 1px 1px 2px 2px #ccc;
   box-shadow: 1px 1px 2px 2px #ccc;
+  border-radius: 25px;
 }
 .comment-form {
   background-color: #fff;
