--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -35,6 +35,7 @@ button:focus {
   -moz-box-shadow: 1px 1px 2px 2px #ccc;
   box-shadow: 1px 1px 2px 2px #ccc;
   border-radius: 25px;
+  margin-bottom: 50px;
 }
 .comment-form {
   background-color: #fff;
