--- a/client/src/components/SearchForm/SearchForm.css
+++ b/client/src/components/SearchForm/SearchForm.css
@@ -23,8 +23,7 @@
 }
 
 .searchDiv {
-  display: flex;
+  display: inline-block;
   min-height: 61vh;
-  flex-direction: column;
   margin-bottom: 45px;
 }
