added background image to index.css, modified styling of search page and profile picture

--- a/client/src/components/ProfilePage/ProfilePage.css
+++ b/client/src/components/ProfilePage/ProfilePage.css
@@ -20,9 +20,10 @@
 .profileImg {
   display: block;
   margin: auto;
+  border-radius: 25px;
 }
 
 .view {
-  background-color: rgba(247, 195, 49, 0.65);
+  background-color: rgba(251, 231, 172, 0.2);
   border-radius: 25px;
 }
