--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: linear-gradient(to right bottom, rgba(251, 231, 172, 0.2)),
+    url(../src/assets/dust_scratches.png);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  height: 100%;
 }
