continued styling modifications to dog cards

--- a/client/src/components/DogCards/DogCards.css
+++ b/client/src/components/DogCards/DogCards.css
@@ -7,11 +7,18 @@
   width: 350px;
   display: inline-block;
   margin-bottom: 100px;
-  margin-left: 50px;
+  margin-left: 60px;
   margin-right: 50px;
+  margin-top: 50px;
 }
 
 img {
   width: 400px;
   height: 450px;
+}
+
+#btnToProfile {
+  background-color: #f7882f;
+  color: white;
+  font-size: 20px;
 }
