review text color update

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -43,6 +43,11 @@ footer {
   max-height: 150px;
 }
 
+.mt-4,
+.my-4 {
+  margin-top: 100px !important;
+}
+
 /* sticky footer */
 /* display: flex;
     min-height: 100vh;
