--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -86,6 +86,7 @@ textarea {
 .comment-body {
   font-style: italic;
   margin-left: 1rem;
+  color: #6b7a8f;
 }
 .comment-footer {
   margin-bottom: 1rem;
