--- a/client/src/components/DogCards/DogCards.css
+++ b/client/src/components/DogCards/DogCards.css
@@ -7,7 +7,7 @@
   width: 350px;
   display: inline-block;
   margin-bottom: 100px;
-  margin-left: px;
+  margin-left: 150px;
   margin-right: 50px;
   margin-top: 50px;
 }
