--- a/client/src/components/SignUpForm/SignUpForm.css
+++ b/client/src/components/SignUpForm/SignUpForm.css
@@ -2,6 +2,7 @@ input[type="text"],
 input[type="password"] {
   width: 100%;
   border: 1px solid #f7c331;
+  font-size: 30px;
 }
 
 .signUpSubmitBtn {
